# butler

./: .env  .envrc  .gitignore  Cargo.toml  Dockerfile  PRIVACY.md  README.md  docker-compose.yml  permissions.md  sample.config.toml
.sqlx/: query-36cea5a600393a90abedcad71a740a937fb256e6a46c1f76a56a6d7be69cf126.json  query-41ccca09e75b0c304a3eefafc348e4606b67c60c55413e8187a2500f542107bd.json  query-4da2f5daf4cda1dab87a13fba40623897bafcaff8b9d79a2cca25b696b4ade08.json  query-63cb144faf335a1574c2da0c85eb4cecd6964bd4f478f669a328c42827d29fb6.json  query-7bb464bee5cde201110d63f6b5708b093bf71b2655c9ee5c6ab15461b1ce9f01.json  query-862480f8931777c9107c82fdc1d2abaa703307cc413318e60cfcab063ff11d31.json  query-8a3e6f79a9ee4a64aa68faadb812c0e109dcba121c6e0caa7f809db7527f0aab.json  query-9502f58aae8cd4a9ae2a6942d6ec8618afec0ba3b0698b0206a014a0808af427.json  query-95d05ef423dcc531be809930fbaa8c91f3ae486ed536c4239c4dab1e5ba79a72.json  query-9f2afad4247e4b1c952573370b26657a41cad356f8508be9461e081f515350ac.json  query-a8888bf487e0f2beab0383625723ed2630a4ecfc3d2cb184bfac25c834061dab.json  query-b884d3a460163998301d4ed57ad6cc8ad16f9d338c564955bb4a9d063a74c63a.json  query-c3271ee12af4ac165535350b0dd917e48a716234d7e9468c64e61b3670bc7afc.json  query-cc3076b2f61aae762db442107fb0e376a758e1d66da2a8b481f4e2f19f1c7727.json  query-da09dc799df07d9908ba8a6b51ad54c81b2c251abdf366861874bd9134da109b.json  query-e3488e33ef1c392e8253a8b21b04e542c905279ab485c0b8400d2b8f2f8689b2.json  query-e7c6135fe3c1bff6385ed8dd8d56ac414f6ce1461f0061a5bbbc28ecd331f9b3.json  (+3 more)
migrations/: 20251017193733_init.sql  (+1 more)
(+24 files in other folders)
