[package]
name = "butler"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
chrono = "0.4.41"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }
humantime = "2.2.0"
uptime_kuma_pusher = { git = "https://github.com/FlareFlo/uptime_kuma_pusher.git", version = "0.3.0" }
ctrlc = { version = "3.4.7", features = ["termination"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
time = { version = "0.3.44", features = ["local-offset"] }
